--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -1,6 +1,7 @@
 @charset "UTF-8";
 
 @media screen and (min-width: 768px) and (max-width: 992px) {
+/* CONFIGURAÇÕES PARA TABLET */
 
     body {
         background-image: linear-gradient(to top, #49a09d, #5f2c82);
@@ -8,6 +9,7 @@
 
     section#login {
         width: 80vw;
+        height: 300px;
     }
 
     section#login > div#imagem {
@@ -23,6 +25,7 @@
 }
 
 @media screen and (min-width:992px) {
+/* CONFIGURAÇÕES DE DESKTOP*/
 
     body {
         background-image: linear-gradient(to top, #49a09d, #5f2c82);
@@ -30,6 +33,7 @@
 
     section#login {
         width: 950px;
+        height: 350px;
     }
 
     section#login > div#imagem {
@@ -49,5 +53,6 @@
 
     div#formulario > p {
         font-size: 1.2em;
+        margin: 20px 0px;
      }
 }
